--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "name": "bootcamp-exam",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "review": "node node_modules/elevation-pr/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "elevation-pr": "^2.1.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "urllib": "^2.36.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/widyan97/bootcamp-recipe.git"
+  },
+  "bugs": {
+    "url": "https://github.com/widyan97/bootcamp-recipe/issues"
+  },
+  "homepage": "https://github.com/widyan97/bootcamp-recipe#readme",
+  "description": ""
 }
